# worker-pool

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
cmake/: asan.cmake  msan.cmake  tsan.cmake  ubsan.cmake
docker/: tests.dockerfile
docker/apt-proxy/: 99proxy.conf  detect-apt-proxy.sh
include/: WorkerPool.h
src/: WorkerPool.cpp
test/: CMakeLists.txt
test/src/: BasicTests.cpp  StressTests.cpp
